--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="nav-link" href="./Comparisons.html"><span class="c-d">Comparison</a>
+                        <a class="nav-link" href="./visualization-image-1.html"><span class="c-d">temperature</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="./Comparisons.html"><span class="c-d">Comparison</a>
+                        <a class="nav-link" href="./visualization-image-2.html"><span class="c-d">humidty</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="./Comparisons.html"><span class="c-d">Comparison</a>
+                        <a class="nav-link" href="./visualization-image-3.html"><span class="c-d">cloudiness</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="./visualization-image-4.html"><span class="c-d">Comparison</a>
+                        <a class="nav-link" href="./visualization-image-4.html"><span class="c-d">wind</a>
                     </li>
                     <li>
                         <div class="dropdown">
